fix overflow on edge and firefox

--- a/less/popup.less
+++ b/less/popup.less
@@ -2,6 +2,8 @@ body{
 	background: #f4f7fa;
 	color: #5c6878;
 	font-family: 'Roboto', sans-serif;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 
 td{
